# fastapi_template

./: LICENSE  README.md  pyproject.toml
src/: docs.py  main.py  run.py
src/core/: config.py
src/routes/: utility.py
src/schemas/: default_schemas.py  responses.py
